Fixed battle description box height on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ button {
 	}
 
 	#textBox {
-		height: 260px;
+		height: 280px;
 	}
 
 	/*#opponentDiv > img {
